# Groovebot

./: .breakpoints  .gitignore  .replit  README.md  app.py  database.py  keep_alive.py  main.py  pm2.json  pyproject.toml  song_list.csv  spotipy_integ.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
cogs/: Greetings.py
pub/: app.py  main.py  spotipy_integ.py
templates/: index.html
