[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A FLL Discord Music Bot named Groovebot"
authors = ["Glitchood glitchood101.github.io"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
discord = "^2.3.2"
flask = "^3.0.0"
spotipy = "^2.23.0"
disnake = "^2.9.1"
consultor = "^0.2.0"
inflect = "^7.0.0"
termcolor = "^2.4.0"
utils = "^1.0.1"
edx-opaque-keys = "^2.5.1"
django-pagination = "^1.0.7"
discord-py = "^2.3.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"